--- a/css/style.scss
+++ b/css/style.scss
@@ -1,304 +1,284 @@
-$navbar-bg-color:#262626;
-$navbar-link-color:#e1b838;
+$navbar-bg-color: #262626;
+$navbar-link-color: #e1b838;
 
-html{
+html {
   font-size: 62.5%;
-
 }
 
-body{
-  font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility;
   background: $navbar-bg-color;
 }
 
 // Header
-nav{
-  background: $navbar-bg-color; 
+nav {
+  background: $navbar-bg-color;
 
-  .img-fluid{
+  .img-fluid {
     max-width: 80%;
   }
 
-  .navbar-toggler{
-    background: $navbar-link-color;    
+  .navbar-toggler {
+    background: $navbar-link-color;
     font-size: 5rem;
   }
 
-  ul{
-    border: .3rem solid $navbar-link-color;
+  ul {
+    border: 0.3rem solid $navbar-link-color;
 
-    li{
-      padding: .3rem 1rem;
+    li {
+      padding: 0.3rem 1rem;
       font-size: 3.3rem;
 
-      a{
+      a {
         color: $navbar-link-color;
       }
-      a:hover{
+      a:hover {
         color: #fff;
       }
     }
-    
-    li:nth-child(3){
+
+    li:nth-child(3) {
       background: $navbar-link-color;
       font-weight: 700;
-      
 
-      a{
+      a {
         color: #000;
       }
 
-      a:hover{
+      a:hover {
         color: #fff;
       }
     }
-
   }
 }
 
-#opening-party{
-  background:linear-gradient(rgba(#44423b,.2),rgba(#000,.7)), url("../img/bg1.jpg");
+#opening-party {
+  background: linear-gradient(rgba(#44423b, 0.2), rgba(#000, 0.7)),
+    url("../img/bg1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 
-  .party{
-    
-    margin:0 14rem;
+  .party {
+    margin: 0 14rem;
     border: 1rem solid $navbar-link-color;
 
-    .opening h2{
+    .opening h2 {
       background: $navbar-link-color;
-      color: rgba(0,0,0,.9);
+      color: rgba(0, 0, 0, 0.9);
       font-size: 4.6rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .date h2{
+    .date h2 {
       font-size: 4.1rem;
       font-weight: 700;
     }
   }
 
-  .food{
-    h2{
+  .food {
+    h2 {
       color: #fff;
       font-size: 4rem;
       font-weight: 300;
     }
   }
-
-  
 }
 
 // Menu
 
-#menu{
-
-  background: linear-gradient(to right,rgba(#fff,.1),rgba(#000,.7)) ,url("../img/bg2.jpg");
+#menu {
+  background: linear-gradient(to right, rgba(#fff, 0.1), rgba(#000, 0.7)),
+    url("../img/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 
   margin: 6rem 0;
 
-  .menu-header{
-    h2{
+  .menu-header {
+    h2 {
       font-size: 6.2rem;
       font-weight: 400;
-      font-family: 'Fjalla One', sans-serif;      
+      font-family: "Fjalla One", sans-serif;
       text-shadow: 1rem 2rem 1rem #000;
     }
   }
 
-  .menu-items{
-
-    h2{
+  .menu-items {
+    h2 {
       background: $navbar-link-color;
       color: $navbar-bg-color;
       font-size: 3rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .menu-items-price{
+    .menu-items-price {
       border: 3px solid $navbar-link-color;
     }
-    p{
+    p {
       font-size: 2.2rem;
       font-weight: 600;
     }
-
   }
 }
 
 // Discount
-#discount{
-
-  background: linear-gradient(to bottom right,rgba(#fff,.1),rgba(#000,.7)),url("../img/bg3.jpg");
+#discount {
+  background: linear-gradient(to bottom right, rgba(#fff, 0.1), rgba(#000, 0.7)),
+    url("../img/bg3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 
-  h2{
+  h2 {
     color: $navbar-link-color;
     font-size: 5.4rem;
   }
 
-  .h2-bold{
+  .h2-bold {
     font-weight: 700;
   }
 
-  .logo{
-    margin-top: 10rem!important;
+  .logo {
+    margin-top: 10rem !important;
   }
 
-  .btn{
+  .btn {
     font-size: 2.6rem;
     font-weight: 400;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: "Fjalla One", sans-serif;
   }
 
-  h3{
-    
+  h3 {
     color: $navbar-link-color;
     font-size: 3.4rem;
     font-weight: 400;
-    font-family: 'Fjalla One', sans-serif;
-    
-  }  
-
+    font-family: "Fjalla One", sans-serif;
+  }
 }
 
 // Specials
-#specials{
-
-  background: linear-gradient(to bottom right,rgba(#fff,.1),rgba(#000,.7)),url("../img/bg4.jpg");
+#specials {
+  background: linear-gradient(to bottom right, rgba(#fff, 0.1), rgba(#000, 0.7)),
+    url("../img/bg4.jpg");
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position: center center;
 
   margin-top: 6rem;
   z-index: 10;
 
-  .margin{
-    margin:5rem 10% 0;
+  .margin {
+    margin: 5rem 10% 0;
   }
 
-  .down-img{
+  .down-img {
     z-index: 100;
   }
 
- 
-  .menu-items{
-
-    h2{
+  .menu-items {
+    h2 {
       background: $navbar-link-color;
       color: $navbar-bg-color;
       font-size: 4rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .menu-items-price{
+    .menu-items-price {
       border: 3px solid $navbar-link-color;
 
-      p{
+      p {
         font-size: 4rem;
         font-weight: 700;
       }
     }
 
-    p{
+    p {
       font-size: 2.8rem;
     }
-
   }
-
 }
 
 // Down
-#down{
-  
+#down {
   position: relative;
- .down{
-  background:$navbar-bg-color;
-  position: absolute;
-  width: 100%;
-  height: 30rem;
-  top: -25rem;
- }
+  .down {
+    background: $navbar-bg-color;
+    position: absolute;
+    width: 100%;
+    height: 30rem;
+    top: -25rem;
+  }
 }
 
-
 // Method
-#method{
-
-  background: linear-gradient(to bottom right,rgba(#fff,.1),rgba(#000,.7)),url("../img/bg5.jpg");
+#method {
+  background: linear-gradient(to bottom right, rgba(#fff, 0.1), rgba(#000, 0.7)),
+    url("../img/bg5.jpg");
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position: center center;
-
 
   padding-top: 30rem;
   position: relative;
   top: -10rem;
 
-  .board{
-    .card-width{
+  .board {
+    .card-width {
       width: 80%;
     }
-    
-    h2{
+
+    h2 {
       background: $navbar-link-color;
       color: $navbar-bg-color;
       font-size: 5.8rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .board-items{
+    .board-items {
       border: 3px solid $navbar-link-color;
 
-      p{
+      p {
         font-size: 3.7rem;
       }
     }
-
   }
 }
 
-
 // Music
-#music{
-
-  background: linear-gradient(rgba(#fff,.1),rgba(#000,.5)) ,url("../img/bg6.jpg");
+#music {
+  background: linear-gradient(rgba(#fff, 0.1), rgba(#000, 0.5)),
+    url("../img/bg6.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 
-  .board{
-    .header{
+  .board {
+    .header {
       background: $navbar-link-color;
       color: $navbar-bg-color;
       font-size: 5.8rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .board-items{
+    .board-items {
       border: 3px solid $navbar-link-color;
 
-      .bold{
+      .bold {
         font-weight: 700;
       }
 
-      h2{
+      h2 {
         font-size: 5.8rem;
       }
     }
-
   }
 
-  .side{
-    h2{
+  .side {
+    h2 {
       font-size: 4.1rem;
     }
   }
@@ -308,73 +288,71 @@ nav{
   //     width: 110%;
   //   }
   // }
-
 }
 
 //about
-#about{
-  .exp{
+#about {
+  .exp {
     color: $navbar-link-color;
     font-size: 4.5rem;
     font-weight: 400;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: "Fjalla One", sans-serif;
   }
 
-  .board{
-    .card-width{
+  .board {
+    .card-width {
       width: 85%;
     }
-    .header{
+    .header {
       background: $navbar-link-color;
       color: $navbar-bg-color;
       font-size: 3.6rem;
       font-weight: 800;
       text-transform: uppercase;
     }
-    .board-items{
+    .board-items {
       border: 3px solid $navbar-link-color;
 
-      h2{
+      h2 {
         font-size: 3rem;
         font-weight: 700;
       }
     }
-
   }
 
-  .site-links{
-    h2{
+  .site-links {
+    h2 {
       font-size: 3.3rem;
       line-height: 7.5rem;
     }
   }
 
-  .foot{
+  .foot {
     margin: 0 3%;
-    h2{
+    h2 {
       font-size: 4rem;
     }
   }
 
-  .social-links{
-    li{
+  .social-links {
+    li {
       display: inline;
       margin-right: 2rem;
     }
-   .fab{
-     background: $navbar-link-color;
-     border-radius: 5%;
-     color: #000;
-     font-size: 4rem;
-     padding: .7rem 1.3rem;
-   }
-   .grill-house{
+    .fab {
+      background: $navbar-link-color;
+      border-radius: 5%;
+      color: #000;
+      font-size: 4rem;
+      padding: 0.7rem 1.3rem;
+    }
+    .grill-house {
       font-size: 3.5rem;
       color: $navbar-link-color;
     }
   }
-  .emran{
-    h2{
+  .emran {
+    h2 {
       color: $navbar-link-color;
       font-size: 3rem;
       font-weight: 600;
@@ -382,201 +360,189 @@ nav{
   }
 }
 
-
-
 //-------------- Responsive Design Start ---------------
 
 // Media Query For Responsive Design
 
-
 //max-width:1200
-@media(max-width:1200px){
-
-  #opening-party{
-    .party{
+@media (max-width: 1200px) {
+  #opening-party {
+    .party {
       margin: 4rem 4rem 0;
-      .opening{
-        h2{
+      .opening {
+        h2 {
           font-size: 4rem;
         }
       }
 
-      .date{
-        h2{
+      .date {
+        h2 {
           font-size: 3.5rem;
         }
       }
     }
-    .food{
-      h2{
+    .food {
+      h2 {
         font-size: 3.4rem;
       }
     }
   }
 
-
   // Menu
-  #menu{
-
+  #menu {
     .menu-items p {
       font-size: 2.3rem;
     }
-
   }
 
   //specials
-  #specials{
-    .menu-items{
-      h2{
+  #specials {
+    .menu-items {
+      h2 {
         font-size: 3.4rem;
       }
-      p{
+      p {
         font-size: 2.4rem;
       }
     }
   }
 
   // Method
-  #method{
-    .board{
+  #method {
+    .board {
       .card-width {
         width: 94%;
       }
-    } 
+    }
   }
 
   //about
-  #about{
+  #about {
+    .emran {
+      a {
+        color: $navbar-link-color;
+      }
+    }
 
-    .board{
-      .header{
+    .board {
+      .header {
         font-size: 5rem;
       }
     }
-    .foot{
-          h2 {
-          font-size: 3.8rem;
-        }
-      } 
-      .social-links{
-        .fab{
-          font-size: 2.2rem;
-        }
-        .grill-house{
-          font-size: 3rem;
-        }
+    .foot {
+      h2 {
+        font-size: 3.8rem;
       }
-  } 
-  
-
+    }
+    .social-links {
+      .fab {
+        font-size: 2.2rem;
+      }
+      .grill-house {
+        font-size: 3rem;
+      }
+    }
+  }
 }
 
 //max-width: 992px
-@media(max-width:1199px){
-    
+@media (max-width: 992px) {
   //menu
-  #menu{
-    .menu-items{
-      p{
+  #menu {
+    .menu-items {
+      p {
         font-size: 1.8rem;
       }
     }
   }
 
   //Specials
-  #specials{
-    .menu-items{
-      h2{
+  #specials {
+    .menu-items {
+      h2 {
         font-size: 2.8rem;
       }
-      p{
+      p {
         font-size: 2.2rem;
       }
     }
   }
 
   //about
-  #about{
-    .board{
-      .board-items{
-        h2{
+  #about {
+    .board {
+      .board-items {
+        h2 {
           font-size: 2.7rem;
         }
       }
     }
 
-    .social-links{
-      .grill-house{
+    .social-links {
+      .grill-house {
         display: block;
         margin-top: 2rem;
       }
     }
   }
-
-
 }
 
-
-//max-width:778
-@media(max-width:991px){
-
-  nav{
-    ul{
-      li{
-
+//max-width:768
+@media (max-width: 768px) {
+  nav {
+    ul {
+      li {
         font-size: 2rem;
       }
     }
   }
 
   //Opening party
-  #opening-party{
-    .party{
+  #opening-party {
+    .party {
       margin: 4rem 3rem 0;
-      .opening{
-        h2{
+      .opening {
+        h2 {
           font-size: 3rem;
         }
       }
 
-      .date{
-        h2{
+      .date {
+        h2 {
           font-size: 2.5rem;
         }
       }
     }
-    .food{
-      h2{
+    .food {
+      h2 {
         font-size: 2.6rem;
       }
     }
   }
 
   // Menu
-  #menu{
-
-    .menu-items{
-      h2{
+  #menu {
+    .menu-items {
+      h2 {
         font-size: 2.3rem;
       }
-        p {
+      p {
         font-size: 1.2rem;
       }
-    } 
-
+    }
   }
 
   //specials
-  #specials{
-    .menu-items{
-      h2{
+  #specials {
+    .menu-items {
+      h2 {
         font-size: 2.1rem;
       }
-      P{
+      P {
         font-size: 1.8rem;
       }
-      .menu-items-price{
-        p{
+      .menu-items-price {
+        p {
           font-size: 3rem;
         }
       }
@@ -584,13 +550,17 @@ nav{
   }
 
   //method
-  #method{
-    .board{
-      h2{
+  #method {
+    .card-width {
+      width: 90%;
+      margin: 0 auto;
+    }
+    .board {
+      h2 {
         font-size: 4rem;
       }
-      .board-items{
-        p{
+      .board-items {
+        p {
           font-size: 2.4rem;
         }
       }
@@ -598,106 +568,102 @@ nav{
   }
 
   //Music
-  #music{
-    .board{
-      .header{
+  #music {
+    .board {
+      .header {
         font-size: 4.5rem;
       }
-      .board-items{
-        h2{
+      .board-items {
+        h2 {
           font-size: 4.8rem;
         }
       }
     }
 
-    .side{
-      h2{
+    .side {
+      h2 {
         font-size: 3.4rem;
       }
     }
   }
 
   //about
-  #about{
-    .board{
-      .board-items{
-        h2{
+  #about {
+    .board {
+      .board-items {
+        h2 {
           font-size: 2rem;
         }
       }
     }
 
-    .foot{
-      h2{
+    .foot {
+      h2 {
         font-size: 2.9rem;
       }
     }
 
-    .social-links{
-      .grill-house{
+    .social-links {
+      .grill-house {
         display: block;
         margin-top: 2rem;
         font-size: 2.5rem;
       }
     }
-
-
   }
-
 }
 
-//max-width:767
-@media(max-width:767px){
-
-  #opening-party{
-    .party{
+//max-width:576
+@media (max-width: 576px) {
+  #opening-party {
+    .party {
       margin: 5rem 0 0;
 
-      .opening{
-        padding:0;
-        h2{
+      .opening {
+        padding: 0;
+        h2 {
           font-size: 2rem;
         }
       }
-      .date{
+      .date {
         padding: 0;
-        h2{
+        h2 {
           font-size: 2rem;
         }
       }
     }
 
-  .food{
-    h2{
-      font-size: 2rem;
+    .food {
+      h2 {
+        font-size: 1.8rem;
+      }
     }
-  }
   }
 
   //Meun
-  #menu{
-    .menu-items{
-      h2{
-        font-size: 4rem;
+  #menu {
+    .menu-items {
+      h2 {
+        font-size: 7rem;
       }
-      p{
+      p {
         font-size: 3rem;
       }
     }
   }
 
   //specials
-  #specials{
-    .menu-items{
-      h2{
+  #specials {
+    .menu-items {
+      h2 {
         font-size: 3.5rem;
       }
-      .menu-items-price{
-        p{          
+      .menu-items-price {
+        p {
           font-size: 3.5rem;
         }
       }
-      p{
+      p {
         margin-top: 1rem;
         font-size: 2.5rem;
       }
@@ -705,9 +671,9 @@ nav{
   }
 
   //Method
-  #method{
-    .board{
-      .card-width{
+  #method {
+    .board {
+      .card-width {
         margin: 0 auto;
         width: 80%;
       }
@@ -715,66 +681,52 @@ nav{
   }
 
   //Music
-  #music{
-    .side{
-      h2{
+  #music {
+    .side {
+      h2 {
         margin-top: 2rem;
       }
     }
   }
 
   //about
-  #about{
-    .board{
-      .card-width{
+  #about {
+    .board {
+      .card-width {
         width: 90%;
         margin: 0 auto;
       }
 
-      .board-items{
-        h2{
+      .board-items {
+        h2 {
           font-size: 3rem;
         }
       }
     }
 
-    .social-links{
-      .fab{
+    .social-links {
+      .fab {
         font-size: 2.5rem;
       }
-      .grill-house{
+      .grill-house {
         font-size: 3rem;
         display: inline;
       }
     }
-
-
   }
-
 }
 
-// ----------- max-width:575 --------------
-@media(max-width:575px){
-
-  #opening-party{
-    .food{
-      h2{
-        font-size: 1.9rem;
-      }
+//max:width:320
+@media (max-width: 320px) {
+  //Head
+  nav {
+    .img-fluid {
+      margin-left: 2rem;
+      max-width: 50%;
+    }
+    .navbar-toggler {
+      font-size: 3rem;
+      margin-right: 2rem;
     }
   }
-
-  //about
-  #about{
-    .social-links{
-      .fab{
-        font-size: 1.9rem;
-      }
-      .grill-house{
-        display: inline;
-      }
-    }
-  }
-
 }
-
